--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 清川的博客
-subtitle: 当愚昧成为主流，清醒便是原罪。
+subtitle: 现实是一片丰饶之海，我是海上的孤舟。
 description: 
 keywords: "Python,GOLang，C++，爬虫，软件安全"
 author: 清川
